Fixed phone number link color on iOS

--- a/themes/hugo-agency-theme/static/css/agency.css
+++ b/themes/hugo-agency-theme/static/css/agency.css
@@ -300,6 +300,10 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+header .intro-text .intro-heading a {
+  color: #FFF;
+}
+
 @media(min-width:768px) {
     header .intro-text {
         padding-top: 300px;
